--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -2,31 +2,11 @@ channels:
   - conda-forge
 dependencies:
   - python=3.7
-  - bokeh=1.4.0
-  - dask=2.8.1
-  - dask-image=0.2.0
-  - dask-ml=1.1.0
-  - jupyterlab>=1.0
-  - nodejs=8.9
-  - notebook<5.7.5
-  - tornado=5
-  - numba
   - numpy=1.17
   - pip
   - pandas=0.25
-  - pyarrow==0.14.1
-  - python-graphviz
-  - seaborn
   - scikit-learn=0.21.3
-  - matplotlib
-  - nbserverproxy
-  - nomkl
-  - h5py
-  - xarray
-  - bottleneck
-  - requests
-  - py-xgboost
-  - dask-xgboost
+  - scipy=1.3
   - pip:
     - mimesis
     - dask-labextension>=1.0.3
