--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - pandas=0.25
   - scikit-learn=0.21.3
   - scipy=1.3
+  - pyndl
   - pip:
     - mimesis
     - dask-labextension>=1.0.3
